--- a/admission.html
+++ b/admission.html
@@ -757,6 +757,7 @@
     </script>
     <script type='text/javascript' src='js/plugins.min.js'></script>
     <script type='text/javascript' src='js/Form-script.js'></script>
+    <script type='text/javascript' src='js/dropdowns.js'></script>
 </body>
 
 </html>
