--- a/index-ar.html
+++ b/index-ar.html
@@ -204,11 +204,10 @@
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                                             style="z-index: 6;background-color: #EB8223;"></div>
 
-                                                        <div class="tp-caption tp-resizeme mrg20"
-                                                            id="slide-6-layer-3" data-x="center" data-y="center"
-                                                            data-voffset="-15" data-width="['auto']"
-                                                            data-height="['auto']" data-type="text"
-                                                            data-responsive_offset="on"
+                                                        <div class="tp-caption tp-resizeme mrg20" id="slide-6-layer-3"
+                                                            data-x="center" data-y="center" data-voffset="-15"
+                                                            data-width="['auto']" data-height="['auto']"
+                                                            data-type="text" data-responsive_offset="on"
                                                             data-frames='[{"delay":690,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
@@ -600,7 +599,7 @@
                                                 <div
                                                     class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border"
-                                                        href="about-us.html" id="gdlr-core-button-id-44682"
+                                                        href="about-us-ar.html" id="gdlr-core-button-id-44682"
                                                         data-aos="fade-right" data-aos-duration="500"
                                                         data-aos-delay="200"><span class="gdlr-core-content"
                                                             style="color: black ;">اقرأ المزيد</span><i
@@ -935,7 +934,9 @@
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                 <div style="transform: scale(0.85);">
-                                    <i class="fa fa-instagram insta-icon"></i>
+                                    <a href="https://www.instagram.com/rafflesksa/">
+                                        <i class="fa fa-instagram insta-icon"></i>
+                                    </a>
                                     <div class="vl">
                                     </div>
                                     <div class="position">
@@ -984,15 +985,15 @@
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
-                                TO SEE HOW WE CAN HELP!
+                            <h2 class="text3-ar">تواصل معنا الآن<br>
+                                ! لنرى كيف يمكننا مساعدتك
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40"
-                                    placeholder="Type your phone number" aria-required="true" aria-invalid="false"
-                                    required pattern="[+0-9\s]+">
+                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                    pattern="[+0-9\s]+">
 
-                                <input type="submit" id="submit" name="submit" value="SUBMIT">
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
                             </form>
                         </div>
                     </div>
@@ -1018,9 +1019,11 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                        <li class="menu-item" style="direction: rtl;"><a href="#"
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Info@raffles-me.com"
                                                 style="float: right;">Info@raffles-me.com</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="#"
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Career@raffles-me.com"
                                                 style="float: right;">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
@@ -1034,11 +1037,10 @@
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                        <li class="menu-item" style="direction: rtl;"><a href="#"
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
                                                 style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="#"
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
                                                 style="float: right;direction: ltr;">+966 55 299 5509</a></li>
-
                                     </ul>
                                 </div>
                             </div>
@@ -1052,7 +1054,8 @@
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                        <li class="menu-item" style="direction: rtl;"><a href="#"
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
                                                 style="float: right;">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
