--- a/services-ar.html
+++ b/services-ar.html
@@ -92,7 +92,7 @@
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
-                            <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
+                            <a class="kingster-top-bar-right-button " href="collaboration-ar.html">التعاون</a>
                             <a class="kingster-top-bar-right-button " href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -111,7 +111,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
+                                <a class="" href="index-ar.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
                             </div>
                         </div>
@@ -329,7 +329,7 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font"><a>تعليم
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5 ar-font"><a>تعليم
                                                             متخصص
                                                         </a></h3>
                                                     <p class="font-css text4 ar-float ar-font">
@@ -347,7 +347,7 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font"><a>نظام
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5 ar-font"><a>نظام
                                                             تحويل مرن
                                                         </a></h3>
                                                     <p class="font-css text4 ar-float ar-font">
@@ -364,7 +364,7 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title ar-font3">
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5 ar-font3 ar-font">
                                                         <a>نظام تعليمي مرن
                                                         </a>
                                                     </h3>
@@ -381,7 +381,7 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font">
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5 ar-font">
                                                         <a>منح دراسية
                                                         </a>
                                                     </h3>
@@ -403,14 +403,15 @@
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
-                                TO SEE HOW WE CAN HELP!
+                            <h2 class="text3-ar">تواصل معنا الآن<br>
+                                ! لنرى كيف يمكننا مساعدتك 
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
-                                    
-                                <input type="submit" id="submit" name="submit" value="SUBMIT">
+                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
                             </form>
                         </div>
                     </div>
@@ -440,14 +441,18 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-2"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob text-ar1">البريد الإلكتروني</h3><span
+                                    class="clear"></span>
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a
-                                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a></li>
-                                        <li class="menu-item"><a
-                                                href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                        style="margin-right: 13%;">
+                                         <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Info@raffles-me.com"
+                                                style="float: right;">Info@raffles-me.com</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Career@raffles-me.com"
+                                                style="float: right;">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -455,12 +460,15 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-3"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title h3mob">Contact Us</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob text-ar1">أرقامنا</h3><span class="clear"></span>
                                 <div class="menu-campus-life-container">
                                     <ul id="menu-campus-life"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="tel:+966550111719">+966 55 011 1719</a></li>
-                                        <li class="menu-item"><a href="tel:+966552995509">+966 55 299 5509</a></li>
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                        style="margin-right: 13%;">
+                                         <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
 
                                     </ul>
                                 </div>
@@ -469,13 +477,15 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                             <div id="gdlr-core-custom-menu-widget-4"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title h3mob">Location</h3><span class="clear"></span>
+                                <h3 class="kingster-widget-title h3mob text-ar1">أماكن تواجدنا</h3><span
+                                    class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
-                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a
-                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
-                                                No.25, Home Offices,
+                                        class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                        style="margin-right: 13%;">
+                                       <li class="menu-item" style="direction: rtl;"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
+                                                style="float: right;">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
                                                 Riyadh, Saudi Arabia</a></li>
                                     </ul>
@@ -488,8 +498,8 @@
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
                         <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
-                                    All
-                                    Rights Reserved</div>
+                            All
+                            Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
