--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -114,7 +114,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
+                                <a class="" href="index-ar.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
                             </div>
                         </div>
@@ -399,17 +399,19 @@
                     <section class="subscription-block mrg24">
                         <div>
                             <div class="subscribe-box">
-                                <div class="inner wow fadeIn">
-                                    <h2 class="text3">GET IN TOUCH WITH US NOW<br>
-                                        TO SEE HOW WE CAN HELP!
-                                    </h2>
-                                    <form id="contact" name="contact" action="" method="post">
-                                        <input type="email" name="email" id="email" required
-                                            placeholder="Type your phone number">
-                                        <input type="submit" id="submit" name="submit" value="SUBMIT">
-                                    </form>
-                                </div>
-                            </div>
+                        <div class="inner wow fadeIn">
+                            <h2 class="text3-ar">تواصل معنا الآن<br>
+                                ! لنرى كيف يمكننا مساعدتك 
+                            </h2>
+                            <form id="contact" name="contact" action="" method="post">
+                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
+                            </form>
+                        </div>
+                    </div>
                         </div>
                     </section>
                     <!-- end subscription-block -->
@@ -434,12 +436,18 @@
                                 <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-2"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob text-ar1">البريد الإلكتروني</h3><span
+                                            class="clear"></span>
                                         <div class="menu-our-campus-container">
                                             <ul id="menu-our-campus"
-                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                                <li class="menu-item"><a href="#">Info@raffles-me.com</a></li>
-                                                <li class="menu-item"><a href="#">Career@raffles-me.com</a></li>
+                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                                style="margin-right: 13%;">
+                                                <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Info@raffles-me.com"
+                                                style="float: right;">Info@raffles-me.com</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Career@raffles-me.com"
+                                                style="float: right;">Career@raffles-me.com</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -447,14 +455,16 @@
                                 <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-3"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title h3mob">Contact Us</h3><span
-                                            class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob text-ar1">أرقامنا</h3><span class="clear"></span>
                                         <div class="menu-campus-life-container">
                                             <ul id="menu-campus-life"
-                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                                <li class="menu-item"><a href="#">+966 55 011 1719</a></li>
-                                                <li class="menu-item"><a href="#">+966 55 299 5509</a></li>
-
+                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                                style="margin-right: 13%;">
+                                                  <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
+        
                                             </ul>
                                         </div>
                                     </div>
@@ -462,50 +472,55 @@
                                 <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                                     <div id="gdlr-core-custom-menu-widget-4"
                                         class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                        <h3 class="kingster-widget-title h3mob">Location</h3><span class="clear"></span>
+                                        <h3 class="kingster-widget-title h3mob text-ar1">أماكن تواجدنا</h3><span
+                                            class="clear"></span>
                                         <div class="menu-academics-container">
                                             <ul id="menu-academics"
-                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                                <li class="menu-item"><a href="#">Office No.25, Home Offices,
-                                                        Turki Bin Abdulaziz st 11454
-                                                        Riyadh, Saudi Arabia</a></li>
+                                                class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                                style="margin-right: 13%;">
+                                                <li class="menu-item" style="direction: rtl;"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
+                                                style="float: right;">Office No.25, Home Offices,
+                                                Turki Bin Abdulaziz st 11454
+                                                Riyadh, Saudi Arabia</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
+        
                         <div class="kingster-copyright-wrapper">
                             <div class="kingster-copyright-container kingster-container clearfix">
-                                <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue.
+                                <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
                                     All
                                     Rights Reserved</div>
                                 <div class="kingster-copyright-right kingster-item-pdlr">
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                         style="padding-bottom: 0px ;">
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="facebook">
+                                        <a href="https://www.facebook.com/RafflesKSA/" target="_blank"
+                                            class="gdlr-core-social-network-icon" title="facebook">
                                             <i class="fa fa-facebook"></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="google-plus">
-                                            <i class="fa fa-google-plus"></i>
+                                        <a href="https://www.tiktok.com/@rafflesksa/" target="_blank"
+                                            class="gdlr-core-social-network-icon" title="tiktok">
+                                            <i class="fa fa-tiktok"><svg xmlns="http://www.w3.org/2000/svg" height="1.18rem"
+                                                    class="tiktok" viewBox="0 0 448 512">
+                                                    <path
+                                                        d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" />
+                                                </svg></i>
                                         </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="linkedin">
-                                            <i class="fa fa-linkedin"></i>
-                                        </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype">
-                                            <i class="fa fa-skype"></i>
-                                        </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="twitter">
-                                            <i class="fa fa-twitter"></i>
-                                        </a>
-                                        <a href="#" target="_blank" class="gdlr-core-social-network-icon"
-                                            title="instagram">
+                                        <a href="https://www.instagram.com/rafflesksa/" target="_blank"
+                                            class="gdlr-core-social-network-icon" title="instagram">
                                             <i class="fa fa-instagram"></i>
+                                        </a>
+                                        <a href="https://www.snapchat.com/add/rafflesksa/" target="_blank"
+                                            class="gdlr-core-social-network-icon" title="snapchat">
+                                            <i class="fa fa-snapchat"></i>
+                                        </a>
+                                        <a href="https://twitter.com/rafflesksa/" target="_blank"
+                                            class="gdlr-core-social-network-icon" title="twitter">
+                                            <i class="fa fa-twitter"></i>
                                         </a>
                                     </div>
                                 </div>
