--- a/course-admission-ar.html
+++ b/course-admission-ar.html
@@ -47,7 +47,7 @@
                                 <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من
                                         نحن</a>
 
                                 </li>
@@ -117,7 +117,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr pbtm logo-ar">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
+                                <a class="" href="index-ar.html"><img class="headerlogo" src="img/raffles-logo.png"
                                         alt="" /></a>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                                 style="padding-bottom: 5px ;">
                                                 <div class="gdlr-core-title-item-title-wrap clearfix">
                                                     <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title course-ar2 ar-float">
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title course-ar2 ar-float title5">
                                                         تفاصيل شخصية
                                                     </h3>
                                                 </div>
@@ -254,7 +254,7 @@
                                                         <a class="terms ar-font ar-float terms-mrg" href="terms-conditions-ar.html">الشروط
                                                             والأحكام
                                                         </a><br>
-                                                        <div class="form-check" dir="rtl">
+                                                        <div class="form-check mrg-agree" dir="rtl">
                                                             <input class="form-check-input" type="checkbox" value=""
                                                                 id="flexCheckDefault">
                                                             <label
@@ -294,18 +294,19 @@
         <section class="subscription-block mrg11">
             <div>
                 <div class="subscribe-box">
-                    <div class="inner wow fadeIn">
-                        <h2 class="text3">GET IN TOUCH WITH US NOW<br>
-                            TO SEE HOW WE CAN HELP!
-                        </h2>
-                        <form id="contact" name="contact" action="" method="post">
-                            <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
+                        <div class="inner wow fadeIn">
+                            <h2 class="text3-ar">تواصل معنا الآن<br>
+                                ! لنرى كيف يمكننا مساعدتك 
+                            </h2>
+                            <form id="contact" name="contact" action="" method="post">
+                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
 
-                            <input type="submit" id="submit" name="submit" value="SUBMIT">
-                        </form>
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
+                            </form>
+                        </div>
                     </div>
-                </div>
             </div>
         </section>
         <!-- end subscription-block -->
@@ -326,14 +327,18 @@
                     <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                         <div id="gdlr-core-custom-menu-widget-2"
                             class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                            <h3 class="kingster-widget-title h3mob">Email</h3><span class="clear"></span>
+                            <h3 class="kingster-widget-title h3mob text-ar1">البريد الإلكتروني</h3><span
+                                class="clear"></span>
                             <div class="menu-our-campus-container">
                                 <ul id="menu-our-campus"
-                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                    <li class="menu-item"><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>
-                                    </li>
-                                    <li class="menu-item"><a
-                                            href="mailto:Career@raffles-me.com">Career@raffles-me.com</a></li>
+                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                    style="margin-right: 13%;">
+                                   <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Info@raffles-me.com"
+                                                style="float: right;">Info@raffles-me.com</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a
+                                                href="mailto:Career@raffles-me.com"
+                                                style="float: right;">Career@raffles-me.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -341,12 +346,15 @@
                     <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                         <div id="gdlr-core-custom-menu-widget-3"
                             class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                            <h3 class="kingster-widget-title h3mob">Contact Us</h3><span class="clear"></span>
+                            <h3 class="kingster-widget-title h3mob text-ar1">أرقامنا</h3><span class="clear"></span>
                             <div class="menu-campus-life-container">
                                 <ul id="menu-campus-life"
-                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                    <li class="menu-item"><a href="tel:+966550111719">+966 55 011 1719</a></li>
-                                    <li class="menu-item"><a href="tel:+966552995509">+966 55 299 5509</a></li>
+                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                    style="margin-right: 13%;">
+                                    <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
 
                                 </ul>
                             </div>
@@ -355,15 +363,17 @@
                     <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 mrg5">
                         <div id="gdlr-core-custom-menu-widget-4"
                             class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                            <h3 class="kingster-widget-title h3mob">Location</h3><span class="clear"></span>
+                            <h3 class="kingster-widget-title h3mob text-ar1">أماكن تواجدنا</h3><span
+                                class="clear"></span>
                             <div class="menu-academics-container">
                                 <ul id="menu-academics"
-                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                    <li class="menu-item"><a
-                                            href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
-                                            No.25, Home Offices,
-                                            Turki Bin Abdulaziz st 11454
-                                            Riyadh, Saudi Arabia</a></li>
+                                    class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
+                                    style="margin-right: 13%;">
+                                     <li class="menu-item" style="direction: rtl;"><a
+                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
+                                                style="float: right;">Office No.25, Home Offices,
+                                                Turki Bin Abdulaziz st 11454
+                                                Riyadh, Saudi Arabia</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -379,23 +389,29 @@
                     <div class="kingster-copyright-right kingster-item-pdlr">
                         <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                             style="padding-bottom: 0px ;">
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook">
+                            <a href="https://www.facebook.com/RafflesKSA/" target="_blank"
+                                class="gdlr-core-social-network-icon" title="facebook">
                                 <i class="fa fa-facebook"></i>
                             </a>
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus">
-                                <i class="fa fa-google-plus"></i>
+                            <a href="https://www.tiktok.com/@rafflesksa/" target="_blank"
+                                class="gdlr-core-social-network-icon" title="tiktok">
+                                <i class="fa fa-tiktok"><svg xmlns="http://www.w3.org/2000/svg" height="1.18rem"
+                                        class="tiktok" viewBox="0 0 448 512">
+                                        <path
+                                            d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" />
+                                    </svg></i>
                             </a>
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype">
-                                <i class="fa fa-skype"></i>
-                            </a>
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="instagram">
+                            <a href="https://www.instagram.com/rafflesksa/" target="_blank"
+                                class="gdlr-core-social-network-icon" title="instagram">
                                 <i class="fa fa-instagram"></i>
+                            </a>
+                            <a href="https://www.snapchat.com/add/rafflesksa/" target="_blank"
+                                class="gdlr-core-social-network-icon" title="snapchat">
+                                <i class="fa fa-snapchat"></i>
+                            </a>
+                            <a href="https://twitter.com/rafflesksa/" target="_blank"
+                                class="gdlr-core-social-network-icon" title="twitter">
+                                <i class="fa fa-twitter"></i>
                             </a>
                         </div>
                     </div>
